--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,6 +6,8 @@ branches:
   only:
     - main  # ветка git
 
+cache: node_modules  # кеширование
+
 install:
   - npm install  # команда установки зависимостей
 
@@ -15,4 +17,11 @@ build_script:
   - npm run build   # команда сборки
 
 test_script:
-  - npm start & npm run lint && npm run test && npm run e2e && kill %1 # скрипт тестирования
+  - npm run lint  # скрипт тестирования
+
+deploy_script:  # скрипт развёртывания
+  - git config --global credential.helper store
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
+  - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
+  - npx push-dir --dir=dist --branch=gh-pages --force --verbose
