--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,37 @@
 {
-    "plugins": ["prettier"],
-    "extends": ["eslint:recommended", "plugin:prettier/recommended"],
-    "env": {
-      "es6": true,
-      "browser": true,
-      "node": true,
-      "jest/globals": true
-    },
-    "globals": {
-      "$": true,
-      "require": true,
-      "process": true
-    },
-    "parserOptions": {
-      "sourceType": "module",
-      "ecmaVersion": 8
-    },
-    "rules": {
-      "no-unused-vars": "warn"
-    },
-    "overrides": [
-      {
-        "files": ["**/*.test.js"],
-        "plugins": ["jest"],
-        "extends": ["plugin:jest/recommended"],
-        "rules": { "jest/prefer-expect-assertions": "off" }
+  "plugins": [
+    "prettier"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
+  "env": {
+    "es6": true,
+    "browser": true,
+    "jest/globals": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-unused-vars": "warn"
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/*.test.js"
+      ],
+      "plugins": [
+        "jest"
+      ],
+      "extends": [
+        "plugin:jest/recommended"
+      ],
+      "rules": {
+        "jest/prefer-expect-assertions": "off"
       }
-    ]
-  }
+    }
+  ]
+}
